# data_analysis

./: CMakeLists.txt  CMakePresets.json  Calculate Returns and Moving Average Implementation.ipynb  README.md
core/: CMakeLists.txt
core/include/: DataPreprocessing.hpp
core/src/: Core.cpp  DataPreprocessing.cpp  FeatureEngineering.cpp  MLModels.cpp
tests/: CMakeLists.txt  UnitTests.cpp
